# Equitas

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: __init__.py  advisors.py  config.py  experiments.py  judges.py  logging_utils.py  mw.py  openai_utils.py  robust_eval.py  robust_stats.py  simulate.py  world.py
configs/: governance_recovery.yaml  governance_recovery_fh.yaml  governance_scaling.yaml  governance_sweep.yaml
equitas/: __init__.py  __main__.py  analysis_cli.py  config.py  logging_utils.py  report_cli.py  types.py  utils.py
equitas/agents/: base.py  (+8 more)
hf_upload/: README.md
paper/: main.tex
scripts/: generate_benchmark_tables.py  generate_go_vs_fh_tables.py  patch_fh_sweep.py
tables/: table1_sweep_aggregator_go_vs_fh.csv  table1_sweep_aggregator_go_vs_fh.tex  table2_sweep_corruption_go_vs_fh.csv  table2_sweep_corruption_go_vs_fh.tex  table3_sweep_adversary_go_vs_fh.csv  table3_sweep_adversary_go_vs_fh.tex  table4_recovery_go_vs_fh.csv  table4_recovery_go_vs_fh.tex  table5_scaling_go_vs_fh.csv  table5_scaling_go_vs_fh.tex  table5b_scaling_detail_go_vs_fh.csv  table6_hier_vs_flat_go_vs_fh.csv  table6_hier_vs_flat_go_vs_fh.tex  table7_pareto_mw_go_vs_fh.csv  table7_pareto_mw_go_vs_fh.tex  table7b_pareto_summary_go_vs_fh.csv  table8_grand_summary_go_vs_fh.csv  table8_grand_summary_go_vs_fh.tex  table9_regime_winners_go_vs_fh.csv  table9_regime_winners_go_vs_fh.tex
tests/: conftest.py  test_adversaries.py  test_aggregators.py  test_batch_pipeline.py  test_config.py  test_metrics.py  test_seeding.py  test_simulation.py  test_world.py
(+132 files in other folders)
