[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equitas"
version = "0.1.0"
description = "A corruption robustness benchmark for multi-LLM committees with hierarchical aggregation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
gsm8k = [
    "datasets>=2.14",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
equitas = "equitas.experiments.runner:main"

[tool.setuptools.packages.find]
include = ["equitas*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
